--- a/mystyle.css
+++ b/mystyle.css
@@ -442,7 +442,7 @@ footer{
     padding-top: 100px;
 }
 
-@media (max-width: 3840px){
+@media (min-width: 1920px) and (max-width: 3840px){
     .right-div{
         width: 30%;
     }
